Adicionando reestruturações de texto e refinamentos

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -33,6 +33,13 @@
     publisher = "LTC"
 }
 
+@article{cemkaner,
+	Author = "Cem Kaner",
+	Title = {Software Negligence and Testing Coverage},
+	Year = {1995},
+	Address = "Dept of Computer Sciences, Florida Tech"
+}
+
 @article{vbse2,
 	Author = "Rudolf Ramler and Stefan Biffl and Paul Grünbacher",
 	Title = {Value-Based Management of Software Testing},
