--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -15,6 +15,6 @@
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{À definir}
-\membroConvidadoUm{À definir}
-\membroConvidadoDois{À definir}
+\dataDaAprovacao{28 de novembro de 2016}
+\membroConvidadoUm{Profª Msc. Cristiane Soares Ramos}
+\membroConvidadoDois{Prof. Dr. Sérgio Antônio Andrade de Freitas}
